MOBI-489 showcase updates - fix tabset z-index - example tabs should go beneath app tabs
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@32427 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base/1_tabset.css
+++ b/resources/themes/base/1_tabset.css
@@ -13,12 +13,10 @@
  * express or implied. See the License for the specific language
  * governing permissions and limitations under the License.
  */
+ 
 .mobi-tabset {
-    /*display: block;*/
-    /*float:left;*/
     margin: 0;
     padding: 0;
-    /*width: 100%;*/
 }
 /* padding for pagepanel */
 .mobi-tabset.mobi-tabset-tabs-top-header{
@@ -31,7 +29,7 @@
     position: fixed;
     text-align:center;
     width: 100%;
-    z-index: 1;
+    z-index: 496;
 }
 .mobi-tabset.mobi-tabset-tabs-top > .mobi-tabset-tabs{
     top: 0;
