--- a/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
+++ b/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
@@ -92,7 +92,7 @@
     input[type='file']{ width: 200px; }
  }
 .exampleTabs > .mobi-tabset-tabs{ 
-    z-index: 0; /* place example tabs underneath the app tabs */
+    z-index: 495; /* place example tabs underneath the app tabs */
     /*border-top:1px solid #A5A9B6;*/
 }
 .mobi-pagePanel-footer .theme{
@@ -111,7 +111,7 @@
     border-top: 1px solid white;
     border-radius: 7px;
     display: block;
-    border: 1px solid #C3D2E4;
+    border: 1px solid rgba(255,255,255,0.5);
     position: absolute;
     left: 0.5em;
     top: 5px;
